# vulkan_renderer

./: .gitignore  README.md  compile.sh  compile_run  main.c  renderer.c  renderer.h  renderer_buffer.h  renderer_image.c  renderer_image.h  renderer_tools.h
assets/models/: box.dae  robot.dae
assets/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
shaders/: frag.spv  shader.frag  shader.vert
src/: Makefile.am  game.c  game.h  linmath.h  main.c  queue.c  queue.h  renderer.c  renderer.h  renderer_buffer.c  renderer_buffer.h  renderer_image.c  renderer_mesh.c  renderer_mesh.h  renderer_tools.c  renderer_tools.h  table.c  table.h
